@@ -2,6 +2,8 @@ git-annex (0.07) UNRELEASED; urgency=low
 
   * find: New subcommand.
   * unused: New subcommand, finds unused data (the global part of fsck).
+  * dropunused: New subcommand, provides for easy dropping of unused keys
+    by number, as listed by unused subcommand.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 14 Nov 2010 12:34:49 -0400
 
